--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -30,5 +30,317 @@
     "utilisateur": "utilisateur",
     "fournisseur": "fournisseur",
     "enregistrer": "Enregistrer"
+  },
+  "pageboutique" : {
+    "nom": "Nom de produit",
+    "type": "Type de produit",
+    "medicament": "Médicament",
+    "beaute": "Beauté et soins",
+    "bebe": "Bébé / Maman",
+    "maison": "Maison",
+    "hydiene": "Hygiéne / Entretien",
+    "brico": "Brico / Jardin",
+    "animalerie": "Animalerie",
+    "mode": "Mode / Loisirs",
+    "librairie": "Librairie / Papeterie",
+    "bio": "Bio / Médecines naturelles",
+    "alimentaire": "Produit alimentaire",
+    "localisation": "Localisation",
+    "manouba": "Manouba",
+    "mornaguia": "Mornaguia",
+    "borjamri": "Borj amri",
+    "jedaida": "Jedaida",
+    "douarhicher": "Douar Hicher",
+    "elbattan": "El Battan",
+    "ouedlil": "Oued Ellil",
+    "tebourba": "Tebourba",
+    "tunis": "Tunis",
+    "babbhar": "Bab El Bhar",
+    "babsouika": "Bab Souika",
+    "carthage": "Carthage",
+    "citelkhadhra": "Cité El Khadra",
+    "jbaljloud": "Djebel Djelloud",
+    "kabaria": "El Kabaria",
+    "hrairia": "El Hrairia",
+    "menzah": "El Menzah",
+    "omrane": "El Omrane",
+    "omranesup": "El Omrane Supérieur",
+    "ouardia": "El Ouardia",
+    "ettahrir": "Ettahrir",
+    "ezzouhourt": "Ezzouhour(Tunis)",
+    "lagoulette": "La Goulette",
+    "marsa": "La Marsa",
+    "medina": "Medina",
+    "bardo": "Le Bardo",
+    "sijoumi": "Sijoumi",
+    "sidibachir": "Sidi El Béchir",
+    "sidihsine": "Sidi Hassine",
+    "benarous": "Ben arous",
+    "boumhel": "Bou Mhel El Bassatine",
+    "mourouj": "El Mourouj",
+    "zahra": "Ezzahra",
+    "fouchana": "Fouchana",
+    "hamamchott": "Hammam Chott",
+    "hamamlif": "Hammam Lif",
+    "nouvellemedina": "La Nouvelle Medina",
+    "megrine": "Megrine",
+    "mohamedia": "Mohamedia",
+    "mornag": "Mornag",
+    "rades": "Rades",
+    "ariana": "Ariana",
+    "tadhamen": "Ettadhamen",
+    "kallatlandlos": "Kalaat el Andalous",
+    "mnihla": "Mnihla",
+    "raoued": "Raoued",
+    "sidithabet": "Sidi Thabet",
+    "soukra": "Soukra",
+    "bizertenord": "Bizerte Nord",
+    "bizertsud": "Bizerte Sud",
+    "djoumine": "Djoumine",
+    "elalia": "El Alia",
+    "gharmelh": "Ghar El Melh",
+    "ghezala": "Ghezala",
+    "mateur": "Mateur",
+    "menzelbourguiba": "Menzel Bourguiba",
+    "menzeljemil": "Menzel Jemil",
+    "rasjabel": "Ras Jabel",
+    "sejenane": "Sejenane",
+    "tinja": "Tinja",
+    "utique": "Utique",
+    "zarzouna": "Zarzouna",
+    "bejanord": "Béja Nord",
+    "bejasud": "Béja Sud",
+    "amdoun": "Amdoun",
+    "goubellat": "Goubellat",
+    "medjezbab": "Medjez El Bab",
+    "nefza": "Nefza",
+    "teboursouk": "Teboursouk",
+    "testour": "Testour",
+    "tibar": "Tibar",
+    "kairounnord": "Kairoun Nord",
+    "kairounsud": "Kairoun Sud",
+    "alaa": "Alaa",
+    "bouhajla": "Bou Hajla",
+    "chebika": "Chebika",
+    "echrarda": "Echrarda",
+    "haffouz": "Haffouz",
+    "hajeblayoun": "Hajeb El Ayoun",
+    "nasrallah": "Nasrallah",
+    "oueslatia": "Oueslatia",
+    "sbikha": "Sbikha",
+    "jendoubanord": "Jendouba Nord",
+    "jendoubasud": "Jendouba Sud",
+    "aindraham": "Ain Draham",
+    "balta": "Balta",
+    "bouaouane": "Bou Aouane",
+    "bousalem": "Bou Salem",
+    "fernana": "Fernana",
+    "ghardimaou": "Ghardimaou",
+    "ouedmeliz": "Oued Meliz",
+    "tabarka": "Tabarka",
+    "kasserinenord": "Kasserine Nord",
+    "kasserinesud": "Kasserine Sud",
+    "elayoun": "El Ayoun",
+    "ezzouhourj": "Ezzouhour(Jendouba)",
+    "feriana": "Fériana",
+    "foussana": "Foussana",
+    "haidra": "Haidra",
+    "hassiferid": "Hassi El Ferid",
+    "jedelienne": "Jedelienne",
+    "majelbelabbes": "Majel Bel Abbés",
+    "sbeitla": "Sbeitla",
+    "sbiba": "Sbiba",
+    "thala": "Thala",
+    "kefest": "Kef Est",
+    "kefouest": "Kef Ouest",
+    "dahmani": "Dahmani",
+    "jerissa": "Jérissa",
+    "ksour": "El Ksour",
+    "sers": "Sers",
+    "kalaatkhasba": "Kalaat Khasba",
+    "kalaatsenan": "Kalaat Senan",
+    "nebeur": "Nebeur",
+    "sakietsidiyoussef": "Sakiet Sidi Youssef",
+    "tajerouine": "Tajerouine",
+    "gabes": "Gabés",
+    "gabesouest": "Gabés Ouest",
+    "gabessud": "Gabes Sud",
+    "ghannouch": "Ghannouch",
+    "hama": "El Hama",
+    "matmata": "Matmata",
+    "mareth": "Mareth",
+    "menzelhabbib": "Manzel El Habbib",
+    "metouia": "Métouia",
+    "nouvellematmata": "Nouvelle Matmata",
+    "mahdia": "Mahdia",
+    "boumerdes": "Bou Merdés",
+    "chebba": "Chebba",
+    "chorbane": "Chorbane",
+    "eldjem": "El Djem",
+    "essouassi": "Essouassi",
+    "hebira": "Hebira",
+    "ksouressef": "Ksour Essef",
+    "mellouleche": "Mellouléche",
+    "ouledchamekh": "Ouled Chamekh",
+    "sidialouane": "Sidi Alouane",
+    "kebili": "Kebili",
+    "douz": "Douz",
+    "elgolaa": "El Golaa",
+    "souklahad": "Souk Lahad",
+    "siliana": "Siliana",
+    "bouarada": "Bou Arada",
+    "gaafour": "Gaafour",
+    "elkrib": "El Krib",
+    "sidibourouis": "Sidi Bou Rouis",
+    "maktar": "Maktar",
+    "rouhia": "Rouhia",
+    "kesra": "Kesra",
+    "bargou": "Bargou",
+    "aroussa": "El Aroussa",
+    "nabeul": "Nabeul",
+    "benikhaled": "Béni Khalled",
+    "benikhiar": "Béni Khiar",
+    "bouargoub": "Bou Argoub",
+    "elhaouaria": "El Haouaria",
+    "elmida": "El Mida",
+    "grombalia": "Grombalia",
+    "hammamet": "Hammamet",
+    "hammamelguezaz": "Hammam El Guezaz",
+    "menzelbouzelfa": "Menzel Bouzelfa",
+    "menzeltemime": "Menzel Temime",
+    "kelibia": "Kélibia",
+    "soliman": "Soliman",
+    "takelsa": "Takelsa",
+    "darchaabane": "Dar Chaabane El Fehri",
+    "soussem": "Sousse Médina",
+    "soussej": "Sousse Jawhara",
+    "sousser": "Sousse Riadh",
+    "sousses": "Sousse Sidi abdelhamid",
+    "zaouia": "zaouia",
+    "ksiba": "Ksiba",
+    "thrayet": "Thrayet",
+    "akouda": "Akouda",
+    "bouficha": "Bouficha",
+    "enfidha": "Enfidha",
+    "hammamsousse": "Hammam Sousse",
+    "hergla": "Hergla",
+    "kalaakebira": "Kalaa Kebira",
+    "kalaaseghira": "Kalaa Seghira",
+    "kondar": "Kondar",
+    "msaken": "M'saken",
+    "sidibouali": "Sid Bou Ali",
+    "sidielhani": "Sidi El Hani",
+    "sfax": "Sfax",
+    "sakietezzit": "Sakiet Ezzit",
+    "chihia": "Chihia",
+    "sakieteddaier": "Sakiet Eddaier",
+    "gremda": "Gremda",
+    "elain": "El Ain",
+    "thyna": "Thyna",
+    "agareb": "Agareb",
+    "jebiniana": "Jebiniana",
+    "elhencha": "El Hencha",
+    "menzelchaker": "Menzel Chaker",
+    "ghraiba": "Ghraiba",
+    "biralibenkhelifa": "Bir Ali Ben Khélifa",
+    "skhira": "Skhira",
+    "mahares": "Mahares",
+    "kerkennah": "Kerkennah",
+    "tataouinenord": "Tataouine Nord",
+    "tataouinesud": "Tataouine Sud",
+    "birlahmar": "Bir Lahmar",
+    "dhehiba": "Dhehiba",
+    "ghomrassen": "Ghomrassen",
+    "remada": "Remada",
+    "smar": "Smar",
+    "sidibouzid": "Sidi Bouzid",
+    "sidialibenaoun": "Sidi Ali Ben Aoun",
+    "regueb": "Regueb",
+    "ouledhaffouz": "Ouled Haffouz",
+    "mezzouna": "Mezzouna",
+    "meknassy": "Meknassy",
+    "menzelbouziane": "Menzel Bouziane",
+    "cebbalaouledasker": "Cebbala Ouled Askar",
+    "birelhafey": "Bir El Hafey",
+    "tozeur": "Tozeur",
+    "tameghza": "Tameghza",
+    "nefta": "Nefta",
+    "hazoua": "Hazoua",
+    "degache": "Degache",
+    "monastir": "Monastir",
+    "bekalta": "Bekalta",
+    "bembla": "Bembla",
+    "benihassen": "Beni Hassen",
+    "jemmal": "Jemmal",
+    "ksarhellal": "Ksar Hellal",
+    "ksibetelmediouni": "Ksibet el-Médiouni",
+    "moknine": "Moknine",
+    "ouerdanine": "Ouerdanine",
+    "sahline": "Sahline",
+    "sayada": "Sayada",
+    "lamta": "Lamta",
+    "bouhajar": "Bou Hajar",
+    "teboulba": "Téboulba",
+    "zaghouan": "Zaghouan",
+    "saouaf": "Saouaf",
+    "nadhour": "Nadhour",
+    "elfahs": "El fahs",
+    "zriba": "Zriba",
+    "birmcherga": "Bir Mcherga",
+    "medeninenord": "Medenine Nord",
+    "medeninesud": "Medenine Sud",
+    "benguardane": "Ben Guardane",
+    "benikhedache": "Beni Khedache",
+    "djerbaajim": "Djerba-Ajim",
+    "djerbahoumtsouk": "Djerba-Houmt Souk",
+    "djerbamidoun": "Djerba-Midoun",
+    "sidmakhlouf": "Sidi Makhlouf",
+    "zarzis": "Zarzis",
+    "status": "Status de produit",
+    "vendre": "à vendre",
+    "donner": "à donner",
+    "ajouter": "Ajouter le",
+    "dlc": "Date limite de consommation",
+    "quantite": "Quantité",
+    "info": "Plus d'information",
+    "prixsansremise": "Prix sans remise",
+    "prixavecremise": "Prix avec remise",
+    "gratuit": "Gratuit"
+  },
+  "listeboutique" : {
+    "nom": "Nom",
+    "domaine": "Domaine",
+    "adresse": "Adresse",
+    "mail": "Mail",
+    "afficher": "Afficher Profil"
+  },
+  "ajoutboutique" : {
+    "nom": "Nom de boutique",
+    "domaine": "Domaine",
+    "pharmacie": "Pharmacie",
+    "boutique": "Boutique",
+    "magasin": "Magasin",
+    "mail": "Mail Professionnelle",
+    "adresse": "Adresse",
+    "horaire": "Horaire",
+    "hdescription": "Ouvert tous les jours de 7h30 à 17h sauf le Dimanche et le Samedi",
+    "reseausociaux": "Réseau Sociaux",
+    "facebook": "Facebok",
+    "instagram": "Instagram",
+    "googlemaps": "Google Maps",
+    "latitude": "Latitude",
+    "longitude": "Longitude",
+    "visitevirtuelle": "Visite Virtuelle",
+    "description1": "Vous pouvez utiliser",
+    "description2": "ce lien",
+    "description3": "pour créer la visite virtuelle de votre boutique sous forme 360° gratuitement et copier le lien  ci-dessous ",
+    "lien": "Lien direct",
+    "ajouter": "Ajouter"
+  },
+  "footer" : {
+    "about": "à propos de",
+    "description": "Zéro Gaspii : Une plateforme web et mobile qui sert à diminuer les gaspi âges : des médicaments , des produits cosmétiques et des produits alimentaires…",
+    "social": "réseau sociaux",
+    "dest": "Tous les droits sont réservés"
   }
 }
