:tada: récuperer les commandes pour chaque produit par le fournisseur

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -342,5 +342,17 @@
     "description": "Zéro Gaspii: نظام أساسي على الويب والجوّال يعمل على تقليل تبذير: الأدوية ومستحضرات التجميل والمنتجات الغذائية ",
     "social": "مواقع التواصل الاجتماعي",
     "dest": "كل الحقوق محفوظة"
+  },
+  "commande" : {
+    "photo": "صورة المنتوج",
+    "nom": "اسم المنتوج",
+    "categorie": "الفئة",
+    "status": "حالة",
+    "dlc": "تاريخ انتهاء الصلاحية",
+    "quantite": "كمية",
+    "prix": "سعر المنتوج",
+    "prixt": "السعر الجملي",
+    "dc": "تاريخ الطلب",
+    "coupon": "استلام الطلب"
   }
 }
