traduction + changement de logo

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -354,5 +354,27 @@
     "prixt": "السعر الجملي",
     "dc": "تاريخ الطلب",
     "coupon": "استلام الطلب"
+  },
+  "login" : {
+    "creer": " إفتح حساب",
+    "nom": "اللقب",
+    "prenom": "الاسم",
+    "email": "بريد إلكتروني",
+    "mdp": "كلمة السر",
+    "adresse": "عنوان",
+    "num": "رقم الهاتف",
+    "user": "مستعمل",
+    "fournisseur": "مزود",
+    "admin": "مشرف",
+    "ajout": "سجل",
+    "mail": "بريد إلكتروني",
+    "mot": "عرض كلمة المرور",
+    "Connexion": "تسجيل الدخول",
+    "oublie": "نسيت كلمة السر ؟"
+  },
+  "forgotpassword" : {
+    "titre": "جد حسابك",
+    "desc": " يرجى إدخال عنوان بريدك الإلكتروني للبحث عن حسابك",
+    "bouton": "يبحث"
   }
 }
